fix modal overflow cutoff UI issue

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -1,6 +1,7 @@
 html {
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
+  height: 100%;
 }
 
 body {
@@ -12,7 +13,7 @@ body {
   margin: 0px;
   line-height: 18px;
   color: #333333;
-  height: auto;
+  height: 100%;
 }
 
 iframe {
